--- a/.github/workflows/build-scan-and-publish.yaml
+++ b/.github/workflows/build-scan-and-publish.yaml
@@ -5,27 +5,23 @@ on:
     branches:
       - 'main'
 
-env:
-  AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
-  AWS_ASSUMABLE_ROLE: ${{ secrets.AWS_ASSUMABLE_ROLE }}
-  AWS_REGION: ${{ secrets.AWS_REGION }}  
-
 permissions:
   id-token: write
   contents: read
 
 jobs:
   build-and-scan-image:
+    environment: ncltd-demo
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
+        uses: aws-actions/configure-aws-credentials@v3
         with:
-          role-to-assume: arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/${{ env.AWS_ASSUMABLE_ROLE }}
-          aws-region: ${{ env.AWS_REGION }}
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_ASSUMABLE_ROLE }}
+          aws-region: ${{ secrets.AWS_REGION }}
           role-duration-seconds: 1200
 
       - name: Login to Amazon ECR
@@ -49,5 +45,5 @@ jobs:
 
       - name: Tag image and push to ECR
         run: | 
-          docker tag distroless-nginx:${{ github.sha }} ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/distroless-nginx:latest
-          docker push ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/distroless-nginx:latest
+          docker tag distroless-nginx:${{ github.sha }} ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/distroless-nginx:latest
+          docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/distroless-nginx:latest
